# matching-engine

./: .gitignore  CMakeLists.txt  Dockerfile.engine  README.md  commit_msg.txt
.github/workflows/: ci.yml
engine/: CMakeLists.txt
engine/include/concurrency/: SPMCQueue.hpp  SPSCQueue.hpp  ThreadUtils.hpp
engine/include/core/: MatchingEngine.hpp  NaiveEngine.hpp
engine/include/data/: IntrusiveOrderList.hpp  LimitOrderBook.hpp  Order.hpp  PriceLevel.hpp  TradeEvent.hpp
engine/include/gateway/: BinaryProtocol.hpp  Config.hpp  ConnectionManager.hpp  WebSocketBroadcaster.hpp  WebSocketGateway.hpp
engine/include/memory/: ObjectPool.hpp
engine/src/: latency_histogram.cpp  main.cpp
engine/src/gateway/: ConnectionManager.cpp  WebSocketGateway.cpp
engine/tests/: test_cancel_lookup.cpp  test_data_structures.cpp  test_limit_order_book.cpp  test_matching_engine.cpp  test_object_pool.cpp  test_spmc_queue.cpp  test_spsc_queue.cpp
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/dashboard/: DepthChart.tsx  LatencyDial.tsx  TradeTape.tsx
frontend/lib/: mockData.ts  store.ts  websocket.ts
frontend/types/: index.ts
include/concurrency/: SPMCQueue.hpp
include/core/: MatchingEngine.hpp
include/data/: CancelLookup.hpp  LimitOrderBook.hpp  Order.hpp  PriceLevel.hpp  TradeEvent.hpp
include/gateway/: BinaryProtocol.hpp  Config.hpp  ConnectionManager.hpp  WebSocketBroadcaster.hpp  WebSocketGateway.hpp
include/memory/: EngineMemory.hpp
src/: benchmarks.cpp  perf_test.cpp
src/gateway/: ConnectionManager.cpp  WebSocketGateway.cpp
src/memory/: EngineMemory.cpp
